[project]
name = "smoldock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.14.4",
    "fastembed>=0.8.0",
    "litellm>=1.90.3",
    "markdownify>=1.2.3",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "smolagents[docker,litellm]>=1.26.0",
]
